# AndroidTool

./: .gitignore  CMakeLists.txt  README.md  settings.gradle
CommonTools/: build.gradle
XRAppOS/: XRAppOSCommon.h  XRAppOSDefine.hpp
XRAppOS/protocol/: CMakeLists.txt  XRValueBox.cpp  XRValueBox.hpp
XRAppOS/render/: CMakeLists.txt  xr_render_camera.h  xr_render_geometry.cc  xr_render_geometry.h  xr_render_light.h  xr_render_material.cc  xr_render_material.h  xr_render_node.cc  xr_render_node.h  xr_render_renderer.cc  xr_render_renderer.h  xr_render_scene.cc  xr_render_scene.h
XRAppOS/render/opengl/: shader.util.cc  shader_util.h  xr_render_gl_base.h  xr_render_gl_program.h  xr_render_gpu_filter.cc  xr_render_gpu_filter.h  xr_render_program.cc  xr_render_simple_shaders.cc  xr_render_simple_shaders.h  xr_render_vbo.cc
XRAppOS/render/opengl/filters/: texture_2d_render_gpu_filter.cc  texture_2d_render_gpu_filter.h
XRAppOS/render/utils/: no_destructor.h
app/: build.gradle
app/src/main/res/values/: strings.xml
cmake/: CMakeLists.txt  FindXRAppOS.cmake  XRAppOSCompiler.cmake  XRAppOSOptions.cmake  XRAppOSUtils.cmake
gradle/wrapper/: gradle-wrapper.properties
platform/android/: settings.gradle
platform/android/CommonTools/src/main/cpp/: CMakeLists.txt  native-lib.cpp
platform/android/XRAppOS/: build.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
third_parts/: FindAliCVKit.cmake  FindCPUFeatures.cmake  FindEigen.cmake  FindGLM.cmake
third_parts/glog/: FindGlog.cmake
(+18 files in other folders)
